--- a/lavavu/html/styles.css
+++ b/lavavu/html/styles.css
@@ -5,11 +5,6 @@ html, body, table {
   font-family: sans-serif;
 }
 
-input, select { 
-  margin: 0;
-  font-size: 9pt;
-}
-
 .message {font-family: monospace; font-size: 9pt;}
 
 p {margin: 0px 2px; }
@@ -20,10 +15,6 @@ div.gap {height: 5px; }
 .left       {float: left}
 .right      {float: right}
 .clear      {clear: both;}
-
-input[type="text"] {width: 200px; }
-
-input[type="range"] {width: 148px; }
 
 .canvas {
   width: 100%; height: 100%;
